--- a/style/style.scss
+++ b/style/style.scss
@@ -12,6 +12,11 @@ html {
     font-family: Arial, Helvetica, sans-serif;
     scroll-behavior: smooth;
     font-size: 16px;
+
+    // responsive font size
+    @media screen and (max-width: 1250px) {
+        font-size: 10px;
+    }
 }
 
 p,
